Add missed historicalTrades change to changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,4 +5,4 @@
   * GET /api/v3/allOrders weight changed to 20
   * GET /api/v3/account weight changed to 20
   * GET /api/v3/myTrades weight changed to 20
-
+  * GET /api/v3/historicalTrades weight changed to 20
